# cargo-neat

./: .editorconfig  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml
integration-tests/clean/: Cargo.toml
integration-tests/clean/first/: Cargo.toml
integration-tests/clean/second/: Cargo.toml
integration-tests/no-workspace/: Cargo.toml
integration-tests/unused/first/: Cargo.toml
integration-tests/unused/second/: Cargo.toml
integration-tests/workspace-dep-only/first/: Cargo.toml
integration-tests/workspace-dep-only/second/: Cargo.toml
src/: main.rs
tests/: ui.rs
tests/ui/cli/: clean.toml  help.toml  no-workspace.toml  unused.toml  workspace-dep-only.toml
