[workspace]
members = ["first", "second"]
package = { edition = "2024", version = "0.0.1" }
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
argh = { version = "0.1.13", default-features = false }
clappen = { version = "0.1.3", default-features = false }

[workspace.metadata.cargo-machete]
ignored = ["anyhow", "argh", "clappen"]
